--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-Flask==1.1.2
+blinker==1.6.2
+click==8.1.3
+colorama==0.4.6
+dominate==2.8.0
+Flask==2.3.2
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==1.1.1
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+Pillow==9.4.0
+visitor==0.1.3
+Werkzeug==2.3.4
 WTForms==2.3.3
-
-Pillow~=9.4.0
