--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 blinker==1.6.2
 click==8.1.3
 colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
 dominate==2.8.0
 Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
 Flask-WTF==1.1.1
+fonttools==4.39.4
 gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.4
 MarkupSafe==2.1.3
+matplotlib==3.7.1
+numpy==1.24.3
+packaging==23.1
 Pillow==9.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+six==1.16.0
 visitor==0.1.3
 Werkzeug==2.3.4
 WTForms==2.3.3
